--- a/bibliography.bib
+++ b/bibliography.bib
@@ -36,3 +36,161 @@ title = {{Global, regional, and national disability-adjusted life-years (DALYs) 
 volume = {392},
 year = {2018}
 }
+
+@article{Mock2012,
+abstract = {Background: Reducing the global burden of injury requires both injury prevention and improved trauma care. We sought to provide an estimate of the number of lives that could be saved by improvements in trauma care, especially in low income and middle income countries.
+
+Methods: Prior data showed differences in case fatality rates for seriously injured persons (Injury Severity Score ≥ 9) in three separate locations: Seattle, WA (high income; case fatality 35%); Monterrey, Mexico (middle income; case fatality 55%); and Kumasi, Ghana (low income; case fatality 63%). For the present study, total numbers of injury deaths in all countries in different economic strata were obtained from the Global Burden of Disease study. The number of lives that could potentially be saved from improvements in trauma care globally was calculated as the difference in current number of deaths from trauma in low income and middle income countries minus the number of deaths that would have occurred if case fatality rates in these locations were decreased to the case fatality rate in high income countries.
+
+Results: Between 1,730,000 and 1,965,000 lives could be saved in low income and middle income countries if case fatality rates among seriously injured persons could be reduced to those in high income countries. This amounts to 34-38% of all injury deaths.
+
+Conclusions: A significant number of lives could be saved by improvements in trauma care globally. This is another piece of evidence in support of investment in and greater attention to strengthening trauma care services globally.},
+author = {Mock C, Joshipura M, Arreola-Risa C, Quansah R.},
+doi = {10.1007/s00268-012-1459-6},
+file = {},
+issn = {},
+journal = {World J Surg},
+keywords = {},
+number = {5},
+pages = {959-963},
+title = {{An estimate of the number of lives that could be saved through improvements in trauma care globally}},
+volume = {36},
+year = {2012}
+}
+
+@article{Rudd2020,
+abstract = {Background: Sepsis is life-threatening organ dysfunction due to a dysregulated host response to infection. It is considered a major cause of health loss, but data for the global burden of sepsis are limited. As a syndrome caused by underlying infection, sepsis is not part of standard Global Burden of Diseases, Injuries, and Risk Factors Study (GBD) estimates. Accurate estimates are important to inform and monitor health policy interventions, allocation of resources, and clinical treatment initiatives. We estimated the global, regional, and national incidence of sepsis and mortality from this disorder using data from GBD 2017.
+
+Methods: We used multiple cause-of-death data from 109 million individual death records to calculate mortality related to sepsis among each of the 282 underlying causes of death in GBD 2017. The percentage of sepsis-related deaths by underlying GBD cause in each location worldwide was modelled using mixed-effects linear regression. Sepsis-related mortality for each age group, sex, location, GBD cause, and year (1990-2017) was estimated by applying modelled cause-specific fractions to GBD 2017 cause-of-death estimates. We used data for 8·7 million individual hospital records to calculate in-hospital sepsis-associated case-fatality, stratified by underlying GBD cause. In-hospital sepsis-associated case-fatality was modelled for each location using linear regression, and sepsis incidence was estimated by applying modelled case-fatality to sepsis-related mortality estimates.
+
+Findings: In 2017, an estimated 48·9 million (95% uncertainty interval [UI] 38·9-62·9) incident cases of sepsis were recorded worldwide and 11·0 million (10·1-12·0) sepsis-related deaths were reported, representing 19·7% (18·2-21·4) of all global deaths. Age-standardised sepsis incidence fell by 37·0% (95% UI 11·8-54·5) and mortality decreased by 52·8% (47·7-57·5) from 1990 to 2017. Sepsis incidence and mortality varied substantially across regions, with the highest burden in sub-Saharan Africa, Oceania, south Asia, east Asia, and southeast Asia.
+
+Interpretation: Despite declining age-standardised incidence and mortality, sepsis remains a major cause of health loss worldwide and has an especially high health-related burden in sub-Saharan Africa.
+
+Funding: The Bill & Melinda Gates Foundation, the National Institutes of Health, the University of Pittsburgh, the British Columbia Children's Hospital Foundation, the Wellcome Trust, and the Fleming Fund.},
+author = {Rudd KE, Johnson SC, Agesa KM, et al.},
+doi = {10.1016/S0140-6736(19)32989-7},
+file = {},
+issn = {},
+journal = {Lancet},
+keywords = {},
+number = {},
+pages = {200-211},
+title = {{Global, regional, and national sepsis incidence and mortality, 1990-2017: analysis for the Global Burden of Disease Study.}},
+volume = {395},
+year = {2020}
+}
+
+@article{Sepsis3,
+abstract = {Importance: Definitions of sepsis and septic shock were last revised in 2001. Considerable advances have since been made into the pathobiology (changes in organ function, morphology, cell biology, biochemistry, immunology, and circulation), management, and epidemiology of sepsis, suggesting the need for reexamination.
+
+Objective: To evaluate and, as needed, update definitions for sepsis and septic shock.
+
+Process: A task force (n = 19) with expertise in sepsis pathobiology, clinical trials, and epidemiology was convened by the Society of Critical Care Medicine and the European Society of Intensive Care Medicine. Definitions and clinical criteria were generated through meetings, Delphi processes, analysis of electronic health record databases, and voting, followed by circulation to international professional societies, requesting peer review and endorsement (by 31 societies listed in the Acknowledgment).
+
+Key findings from evidence synthesis: Limitations of previous definitions included an excessive focus on inflammation, the misleading model that sepsis follows a continuum through severe sepsis to shock, and inadequate specificity and sensitivity of the systemic inflammatory response syndrome (SIRS) criteria. Multiple definitions and terminologies are currently in use for sepsis, septic shock, and organ dysfunction, leading to discrepancies in reported incidence and observed mortality. The task force concluded the term severe sepsis was redundant.
+
+Recommendations: Sepsis should be defined as life-threatening organ dysfunction caused by a dysregulated host response to infection. For clinical operationalization, organ dysfunction can be represented by an increase in the Sequential [Sepsis-related] Organ Failure Assessment (SOFA) score of 2 points or more, which is associated with an in-hospital mortality greater than 10%. Septic shock should be defined as a subset of sepsis in which particularly profound circulatory, cellular, and metabolic abnormalities are associated with a greater risk of mortality than with sepsis alone. Patients with septic shock can be clinically identified by a vasopressor requirement to maintain a mean arterial pressure of 65 mm Hg or greater and serum lactate level greater than 2 mmol/L (>18 mg/dL) in the absence of hypovolemia. This combination is associated with hospital mortality rates greater than 40%. In out-of-hospital, emergency department, or general hospital ward settings, adult patients with suspected infection can be rapidly identified as being more likely to have poor outcomes typical of sepsis if they have at least 2 of the following clinical criteria that together constitute a new bedside clinical score termed quickSOFA (qSOFA): respiratory rate of 22/min or greater, altered mentation, or systolic blood pressure of 100 mm Hg or less.
+
+Conclusions and relevance: These updated definitions and clinical criteria should replace previous definitions, offer greater consistency for epidemiologic studies and clinical trials, and facilitate earlier recognition and more timely management of patients with sepsis or at risk of developing sepsis.},
+author = {Singer M, Deutschman CS, Seymour CW, et al.},
+doi = {10.1001/jama.2016.0287},
+file = {},
+issn = {},
+journal = {JAMA},
+keywords = {},
+number = {8},
+pages = {801-810},
+title = {{The Third International Consensus Definitions for Sepsis and Septic Shock (Sepsis-3)}},
+volume = {315},
+year = {2016}
+}
+
+@article{Shankar2016,
+abstract = {Importance: Septic shock currently refers to a state of acute circulatory failure associated with infection. Emerging biological insights and reported variation in epidemiology challenge the validity of this definition.
+
+Objective: To develop a new definition and clinical criteria for identifying septic shock in adults.
+
+Design, setting, and participants: The Society of Critical Care Medicine and the European Society of Intensive Care Medicine convened a task force (19 participants) to revise current sepsis/septic shock definitions. Three sets of studies were conducted: (1) a systematic review and meta-analysis of observational studies in adults published between January 1, 1992, and December 25, 2015, to determine clinical criteria currently reported to identify septic shock and inform the Delphi process; (2) a Delphi study among the task force comprising 3 surveys and discussions of results from the systematic review, surveys, and cohort studies to achieve consensus on a new septic shock definition and clinical criteria; and (3) cohort studies to test variables identified by the Delphi process using Surviving Sepsis Campaign (SSC) (2005-2010; n = 28,150), University of Pittsburgh Medical Center (UPMC) (2010-2012; n = 1,309,025), and Kaiser Permanente Northern California (KPNC) (2009-2013; n = 1,847,165) electronic health record (EHR) data sets.
+
+Main outcomes and measures: Evidence for and agreement on septic shock definitions and criteria.
+
+Results: The systematic review identified 44 studies reporting septic shock outcomes (total of 166,479 patients) from a total of 92 sepsis epidemiology studies reporting different cutoffs and combinations for blood pressure (BP), fluid resuscitation, vasopressors, serum lactate level, and base deficit to identify septic shock. The septic shock-associated crude mortality was 46.5% (95% CI, 42.7%-50.3%), with significant between-study statistical heterogeneity (I2 = 99.5%; τ2 = 182.5; P < .001). The Delphi process identified hypotension, serum lactate level, and vasopressor therapy as variables to test using cohort studies. Based on these 3 variables alone or in combination, 6 patient groups were generated. Examination of the SSC database demonstrated that the patient group requiring vasopressors to maintain mean BP 65 mm Hg or greater and having a serum lactate level greater than 2 mmol/L (18 mg/dL) after fluid resuscitation had a significantly higher mortality (42.3% [95% CI, 41.2%-43.3%]) in risk-adjusted comparisons with the other 5 groups derived using either serum lactate level greater than 2 mmol/L alone or combinations of hypotension, vasopressors, and serum lactate level 2 mmol/L or lower. These findings were validated in the UPMC and KPNC data sets.
+
+Conclusions and relevance: Based on a consensus process using results from a systematic review, surveys, and cohort studies, septic shock is defined as a subset of sepsis in which underlying circulatory, cellular, and metabolic abnormalities are associated with a greater risk of mortality than sepsis alone. Adult patients with septic shock can be identified using the clinical criteria of hypotension requiring vasopressor therapy to maintain mean BP 65 mm Hg or greater and having a serum lactate level greater than 2 mmol/L after adequate fluid resuscitation.},
+author = {Shankar-Hari M, Phillips GS, Levy ML, et al.},
+doi = {10.1001/jama.2016.0289},
+file = {},
+issn = {},
+journal = {JAMA},
+keywords = {},
+number = {8},
+pages = {775-787},
+title = {{Developing a New Definition and Assessing New Clinical Criteria for Septic Shock: For the Third International Consensus Definitions for Sepsis and Septic Shock (Sepsis-3)}},
+volume = {315},
+year = {2016}
+}
+
+@article{Seymour2016,
+abstract = {Importance: The Third International Consensus Definitions Task Force defined sepsis as "life-threatening organ dysfunction due to a dysregulated host response to infection." The performance of clinical criteria for this sepsis definition is unknown.
+
+Objective: To evaluate the validity of clinical criteria to identify patients with suspected infection who are at risk of sepsis.
+
+Design, settings, and population: Among 1.3 million electronic health record encounters from January 1, 2010, to December 31, 2012, at 12 hospitals in southwestern Pennsylvania, we identified those with suspected infection in whom to compare criteria. Confirmatory analyses were performed in 4 data sets of 706,399 out-of-hospital and hospital encounters at 165 US and non-US hospitals ranging from January 1, 2008, until December 31, 2013.
+
+Exposures: Sequential [Sepsis-related] Organ Failure Assessment (SOFA) score, systemic inflammatory response syndrome (SIRS) criteria, Logistic Organ Dysfunction System (LODS) score, and a new model derived using multivariable logistic regression in a split sample, the quick Sequential [Sepsis-related] Organ Failure Assessment (qSOFA) score (range, 0-3 points, with 1 point each for systolic hypotension [≤100 mm Hg], tachypnea [≥22/min], or altered mentation).
+
+Main outcomes and measures: For construct validity, pairwise agreement was assessed. For predictive validity, the discrimination for outcomes (primary: in-hospital mortality; secondary: in-hospital mortality or intensive care unit [ICU] length of stay ≥3 days) more common in sepsis than uncomplicated infection was determined. Results were expressed as the fold change in outcome over deciles of baseline risk of death and area under the receiver operating characteristic curve (AUROC).
+
+Results: In the primary cohort, 148,907 encounters had suspected infection (n = 74,453 derivation; n = 74,454 validation), of whom 6347 (4%) died. Among ICU encounters in the validation cohort (n = 7932 with suspected infection, of whom 1289 [16%] died), the predictive validity for in-hospital mortality was lower for SIRS (AUROC = 0.64; 95% CI, 0.62-0.66) and qSOFA (AUROC = 0.66; 95% CI, 0.64-0.68) vs SOFA (AUROC = 0.74; 95% CI, 0.73-0.76; P < .001 for both) or LODS (AUROC = 0.75; 95% CI, 0.73-0.76; P < .001 for both). Among non-ICU encounters in the validation cohort (n = 66 522 with suspected infection, of whom 1886 [3%] died), qSOFA had predictive validity (AUROC = 0.81; 95% CI, 0.80-0.82) that was greater than SOFA (AUROC = 0.79; 95% CI, 0.78-0.80; P < .001) and SIRS (AUROC = 0.76; 95% CI, 0.75-0.77; P < .001). Relative to qSOFA scores lower than 2, encounters with qSOFA scores of 2 or higher had a 3- to 14-fold increase in hospital mortality across baseline risk deciles. Findings were similar in external data sets and for the secondary outcome.
+
+Conclusions and relevance: Among ICU encounters with suspected infection, the predictive validity for in-hospital mortality of SOFA was not significantly different than the more complex LODS but was statistically greater than SIRS and qSOFA, supporting its use in clinical criteria for sepsis. Among encounters with suspected infection outside of the ICU, the predictive validity for in-hospital mortality of qSOFA was statistically greater than SOFA and SIRS, supporting its use as a prompt to consider possible sepsis.},
+author = {Seymour CW, Liu VX, Iwashyna TJ, et al.},
+doi = {10.1001/jama.2016.0288},
+file = {},
+issn = {},
+journal = {JAMA},
+keywords = {},
+number = {8},
+pages = {762-774},
+title = {{Assessment of Clinical Criteria for Sepsis: For the Third International Consensus Definitions for Sepsis and Septic Shock (Sepsis-3)}},
+volume = {315},
+year = {2016}
+}
+
+
+
+@article{,
+abstract = {},
+author = {},
+doi = {},
+file = {},
+issn = {},
+journal = {},
+keywords = {},
+number = {},
+pages = {},
+title = {{}},
+volume = {},
+year = {}
+}
+
+
+
+
+
+%
+%@article{,
+%abstract = {},
+%author = {},
+%doi = {},
+%file = {},
+%issn = {},
+%journal = {},
+%keywords = {},
+%number = {},
+%pages = {},
+%title = {{}},
+%volume = {},
+%year = {}
+%}
