--- a/bibliography.bib
+++ b/bibliography.bib
@@ -175,7 +175,14 @@ volume = {},
 year = {}
 }
 
-
+@Manual{RStudio,
+    title = {R: A Language and Environment for Statistical Computing},
+    author = {{R Core Team}},
+    organization = {R Foundation for Statistical Computing},
+    address = {Vienna, Austria},
+    year = {2020},
+    url = {https://www.R-project.org/},
+  }
 
 
 
