Code table1 and introduction from progressreport KI

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -170,3 +170,183 @@ year = {2016}
     url = {https://www.R-project.org/},
   }
 
+
+
+
+@article{James2020,
+abstract = {},
+author = {James, S. L., Castle, C. D., Dingels, Z. V., Fox, J. T., Hamilton, E. B., Liu, Z., S Roberts, N. L., Sylte, D. O., Henry, N. J., LeGrand, K. E., Abdelalim, A., Abdoli, A., Abdollahpour, I., Abdulkader, R. S., Abedi, A., Abosetugn, A. E., Abushouk, A. I., Adebayo, O. M., Agudelo-Botero, M., Ahmad, T., … Vos, T.},
+doi = {https://doi-org.proxy.kib.ki.se/10.1136/injuryprev-2019-043494},
+file = {},
+issn = {},
+journal = { Injury prevention : journal of the International Society for Child and Adolescent Injury Prevention,},
+keywords = {},
+number = {},
+pages = {i96–i114},
+title = {{Global injury morbidity and mortality from 1990 to 2017: results from the Global Burden of Disease Study 2017.}},
+volume = {26},
+year = {2020}
+}
+
+
+@article{Prinja2019,
+abstract = {},
+author = {Prinja, S., Jagnoor, J., Sharma, D., Aggarwal, S., Katoch, S., Lakshmi, P., & Ivers, R.},
+doi = {https://doi-org.proxy.kib.ki.se/10.1371/journal.pone.0224721},
+file = {},
+issn = {},
+journal = { PloS one},
+keywords = {},
+number = {11},
+pages = {},
+title = {{Out-of-pocket expenditure and catastrophic health expenditure for hospitalization due to injuries in public sector hospitals in North India.}},
+volume = {14},
+year = {2019}
+}
+
+@article{King2019,
+abstract = {},
+author = {King D. R.},
+doi = {https://doi-org.proxy.kib.ki.se/10.1056/NEJMra1609326},
+file = {},
+issn = {},
+journal = {The New England journal of medicine},
+keywords = {},
+number = {8},
+pages = {763-770},
+title = {{Initial Care of the Severely Injured Patient.}},
+volume = {380},
+year = {2019}
+}
+
+@article{Lambden2019,
+abstract = {},
+author = {Lambden, S., Laterre, P. F., Levy, M. M., & Francois, B.},
+doi = {https://doi-org.proxy.kib.ki.se/10.1186/s13054-019-2663-7},
+file = {},
+issn = {},
+journal = {Critical care (London, England)},
+keywords = {},
+number = {1},
+pages = {374},
+title = {{The SOFA score-development, utility and challenges of accurate assessment in clinical trials}},
+volume = {23},
+year = {2019}
+}
+
+@article{David2017,
+abstract = {},
+author = {David, S., & Brunkhorst, F.},
+doi = {https://doi.org/10.1007/s00108-017-0338-5},
+file = {},
+issn = {},
+journal = {Der Internist},
+keywords = {},
+number = {12},
+pages = {1263-1271},
+title = {{Sepsis-3: What has been confirmed in therapy?}},
+volume = {58},
+year = {2017}
+}
+
+@article{Miyamoto2019,
+abstract = {},
+author = {Miyamoto, K., Shibata, N., Ogawa, A., Nakashima, T., & Kato, S.},
+doi = {https://doi.org/10.1016/j.ajem.2019.03.007},
+file = {},
+issn = {},
+journal = {The American Journal of Emergency Medicine},
+keywords = {},
+number = {12},
+pages = {2165–2170},
+title = {{Prehospital quick sequential organ failure assessment score to predict in-hospital mortality among patients with trauma.}},
+volume = {37},
+year = {2019}
+}
+
+@article{Miyamoto2020,
+abstract = {},
+author = {Miyamoto, K., Shibata, N., Ogawa, A., Nakashima, T., & Kato, S.},
+doi = {https://doi-org.proxy.kib.ki.se/10.1002/ams2.532},
+file = {},
+issn = {},
+journal = {Acute medicine & surgery},
+keywords = {},
+number = {1},
+pages = {e532},
+title = {{Prehospital and in-hospital quick Sequential Organ Failure Assessment (qSOFA) scores to predict in-hospital mortality among trauma patients: an analysis of nationwide registry data.}},
+volume = {7},
+year = {2020}
+}
+
+
+@article{Champion1989,
+abstract = {},
+author = {Champion, H. R., Sacco, W. J., Copes, W. S., Gann, D. S., Gennarelli, T. A., & Flanagan, M. E.},
+doi = {https://doi-org.proxy.kib.ki.se/10.1097/00005373-198905000-00017},
+file = {},
+issn = {},
+journal = {The Journal of trauma},
+keywords = {},
+number = {5},
+pages = {623-629},
+title = {{A revision of the Trauma Score}},
+volume = {29},
+year = {1989}
+}
+
+
+@article{Giannakopoulos2011,
+abstract = {},
+author = {	Giannakopoulos, G. F., Saltzherr, T. P., Lubbers, W. D., Christiaans, H. M., van Exter, P., de Lange-de Klerk, E. S., Bloemers, F. W., Zuidema, W. P., Goslings, J. C., & Bakker, F. C.},
+doi = {https://doi-org.proxy.kib.ki.se/10.1097/MEJ.0b013e328344912e},
+file = {},
+issn = {},
+journal = {European journal of emergency medicine: official journal of the European Society for Emergency Medicine},
+keywords = {},
+number = {4},
+pages = {197-201},
+title = {{Is a maximum Revised Trauma Score a safe triage tool for Helicopter Emergency Medical Services cancellations?}},
+volume = {18},
+year = {2011}
+}
+
+@article{Alvarez2016,
+abstract = {},
+author = {Alvarez, B. D., Razente, D. M., Lacerda, D. A., Lother, N. S., VON-Bahten, L. C., & Stahlschmidt, C. M. },
+doi = {https://doi-org.proxy.kib.ki.se/10.1590/0100-69912016005010},
+file = {},
+issn = {},
+journal = {Revista do Colegio Brasileiro de Cirurgioes},
+keywords = {},
+number = {5},
+pages = {334-340},
+title = {{Analysis of the Revised Trauma Score (RTS) in 200 victims of different trauma mechanisms.}},
+volume = {43},
+year = {2016}
+}
+
+<!--
+1.	National Library of Medicine. Medical Search Headings (MeSH). https://meshb-nlm-nih-gov.proxy.kib.ki.se/record/ui?ui=D014947 [accessed 4 October 2020].
+
+
+14.	(2016).  , 43(5), 334–340.
+
+15.	TITCO collaborators (2017). TITCO dataset version 1. Available from https://github.com/titco/titco-I. [accessed 4 October 2020]
+--->
+
+
+@article{,
+abstract = {},
+author = {},
+doi = {},
+file = {},
+issn = {},
+journal = {},
+keywords = {},
+number = {},
+pages = {},
+title = {{}},
+volume = {},
+year = {}
+}
